# ChessServer

./: .drone.yml  .helmignore  .travis.yml  CMakeLists.txt  Chart.yaml  Dockerfile  anticheat.c  anticheat.h  ll.c  ll.h  main.c  sonar-project.properties  tests.py  values.yaml
src/: anticheat.c  anticheat.h  ll.c  main.c
templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
